[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "woshi"
version = "2.1.0"
description = "On-the-go HTML Abstraction and Generator for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "LICENSE.txt"
keywords = ["html", "abstraction", "template", "python"]
authors = [
    { name="Rodney Maniego Jr." },
    { email="rodney.maniegojr@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = []

[project.urls]
homepage = "https://github.com/rmaniego/woshi"
documentation = "https://woshi.readthedocs.io"
